Refactor threeSum method for clarity and efficiency